// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot with children 1`] = `
<DocumentFragment>
  <li
    aria-expanded="false"
    aria-selected="false"
    class="pf-v6-c-tree-view__list-item"
    role="treeitem"
    tabindex="-1"
  >
    <div
      class="pf-v6-c-tree-view__content"
    >
      <button
        class="pf-v6-c-tree-view__node"
        type="button"
      >
        <span
          class="pf-v6-c-tree-view__node-container"
        >
          <span
            class="pf-v6-c-tree-view__node-toggle"
            tabindex="-1"
          >
            <span
              class="pf-v6-c-tree-view__node-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-tree-view__node-text"
          >
            Item name
          </span>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`Matches snapshot without children 1`] = `
<DocumentFragment>
  <li
    aria-expanded="false"
    aria-selected="false"
    class="pf-v6-c-tree-view__list-item"
    role="treeitem"
    tabindex="-1"
  >
    <div
      class="pf-v6-c-tree-view__content"
    >
      <button
        class="pf-v6-c-tree-view__node"
        type="button"
      >
        <span
          class="pf-v6-c-tree-view__node-container"
        >
          <span
            class="pf-v6-c-tree-view__node-text"
          >
            Item name
          </span>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;
